syntax = "proto3";

package serviceDNS;

option go_package = "morzle.serviceDNS.v1";

service serviceDNS {
  rpc SetHostname (SetHostnameRequest) returns (SetHostnameResponse);
  rpc GetHostname (GetHostnameRequest) returns (GetHostnameResponse);

  rpc GetAllDNS (GetAllDNSRequest) returns (GetAllDNSResponse);
  rpc SetDNS (SetDNSRequest) returns (SetDNSResponse);
  rpc DeleteDNS (DeleteDNSRequest) returns (DeleteDNSResponse);
}

message  SetHostnameRequest {
  string hostname = 1;
}
message  SetHostnameResponse {
  bool success = 1;
  string error = 2;
}

message GetHostnameRequest {

}
message GetHostnameResponse {
  string hostname = 1;
}

message GetAllDNSRequest {

}
message GetAllDNSResponse {
  repeated Dns items = 1;
}
message Dns {
  string firstname = 1;
  string ip = 2;
}

message SetDNSRequest {
  string name = 1;
  string shortname = 2;
  string ip = 3;
}
message SetDNSResponse {
  bool success = 1;
  string error = 2;
}

message DeleteDNSRequest {
  string name = 1;
  string ip = 2;
}
message DeleteDNSResponse {
  bool success = 1;
  string error = 2;
}